--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.9.0",
     "babel-plugin-transform-remove-console": "^6.9.4",
+    "framer-motion": "^12.16.0",
     "lucide-react": "^0.511.0",
     "next": "^15.3.3",
     "next-auth": "^4.24.11",
