--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^4.3.0",
     "axios": "^1.9.0",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "canvas-confetti": "^1.9.3",
